base template changed

--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,4 +1,4 @@
-{% extends 'products/base.html' %}
+{% extends 'users/base.html' %}
 {% load static %}
 
 
@@ -34,7 +34,7 @@
                                 </div>
                                 <div class="form-group d-flex align-items-center justify-content-between mt-4 mb-0">
                                     <a href="#">
-                                        <i class="fab fa-google fa -2x" style="color: #d9503e;"></i>
+                                        <i class="fab fa-google fa-2x" style="color: #d9503e;"></i>
                                     </a>
                                     <a href="#">
                                         <i class="fab fa-vk fa-2x" style="color: #4a658b;"></i>
