--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -54,7 +54,6 @@
                 </div>
 
                 <div class="row">
-
                     {% for product in products %}
                         <div class="col-lg-4 col-md-6 mb-4">
                             <div class="card h-100">
@@ -71,7 +70,10 @@
                                     <p class="card-text">{{ product.description }}</p>
                                 </div>
                                 <div class="card-footer text-center">
-                                    <button type="button" class="btn btn-outline-success">Отправить в корзину</button>
+                                    <a type="button" class="btn btn-outline-success"
+                                       href="{% url 'products:basket_add' product.id %}">
+                                        Отправить в корзину
+                                    </a>
                                 </div>
                             </div>
                         </div>
